[package]
name = "wappier_rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version="4.0.0-rc.3" }
chrono = "0.4.19"
futures = "0.3.21"
mongodb = "2.1.0"
redis = "0.21.5"
serde = { version = "1", features = ["derive"] }
bson = "2.1.0"
serde_json = "1.0.78"
